调整字体修复弹窗卡顿问题

--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/ButtonStyle.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/ButtonStyle.axaml
@@ -84,7 +84,8 @@
                                     HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
                                     VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
                                     Content="{TemplateBinding Content}"
-                                    ContentTemplate="{TemplateBinding ContentTemplate}" />
+                                    ContentTemplate="{TemplateBinding ContentTemplate}"
+                                    UseLayoutRounding="True" />
                             </Border>
                         </Grid>
                     </Border>
