--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Themes/Default.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Themes/Default.axaml
@@ -39,4 +39,8 @@
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/GroupBoxStyle.axaml" />
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/TreeViewStyle.axaml" />
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/TreeViewItemStyle.axaml" />
+    <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/ScrollViewerStyle.axaml" />
+    <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/ScrollBarStyle.axaml" />
+    <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/LegendStyle.axaml" />
+    <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/BadgeStyle.axaml" />
 </Styles>
